# aizorius-judge

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/agent-memory/dataset-curator/: MEMORY.md  card-interactions-notes.md  combat-rule-numbers.md  commander-rules.md  cr-numbering-notes.md  cr-version.md  (+3 more)
.claude/agents/: critical-reviewer.md  dataset-curator.md  design-planner.md  eval-runner.md  rules-reviewer.md
.claude/hooks/: py-format.sh  stop-gate.sh
.claude/rules/: coding.md  documentation.md  python.md
.github/workflows/: ci.yml
data/: MANIFEST.json
docs/: ARCHITECTURE.md  EVALUATION.md  PLAN.md  README.md
evaluation/: REVIEW-cards.md  REVIEW-faq.md  REVIEW.md  dataset-candidates-cards.jsonl  dataset.jsonl  test_runner.md
evaluation/reports/: card-analysis.md  correlation-answers.md  generation-eval.md  holdout-eval.md  phase1-correlation.md  retrieval-eval.md  retrieval-tuning.md  spike-embedding.md
evaluation/reviews/: REVIEW-cards.md  REVIEW-faq.md  REVIEW.md  dataset-candidates-faq.jsonl
scripts/: analyze_cards.py  build_index.py  eval_holdout.py  eval_retrieval.py  fetch_holdout_queries.py  fetch_rules.sh  parse_rules.py  prepare_generation_contexts.py  report_generation_eval.py  spike_embedding.py  tune_retrieval.py  validate_dataset.py
src/aizorius_judge/: __init__.py  data_loader.py  errors.py  models.py  rules_parser.py  scryfall.py  search.py  settings.py
tests/: test_data_loader.py  test_rules_parser.py  test_scryfall.py  test_search.py  test_validate_dataset.py
(+20 files in other folders)
