[project]
name = "aizorius-judge"
version = "0.1.0"
description = "MTGルール裁定を支援するMCPサーバー（検索の道具箱。推論はクライアント側LLM）"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "numpy>=2.5.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
]

[project.optional-dependencies]
eval = [
    "openai>=1.30",
]

[dependency-groups]
dev = [
    "ruff>=0.5",
    "black>=24.4",
    "basedpyright>=1.15",
    "pytest>=8.2",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aizorius_judge"]

[tool.uv]
package = true

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "RUF"]
# RUF001-003: 日本語コメント/docstringの全角文字を誤検知するため無効化
ignore = ["RUF001", "RUF002", "RUF003", "E501"]

[tool.black]
target-version = ["py312"]

[tool.basedpyright]
include = ["src", "scripts", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "local_index: 実CRインデックスが必要なローカル専用テスト（CIでは実データ不在によりスキップ）",
]
